[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyclearpass"
version = "1.0.5"
authors = [{ name="Aruba Automation", email="aruba-automation@hpe.com" }]
dependencies = ["requests >=2.24","urllib3 >=1.25.10"]
description = "HPE Aruba Networking ClearPass SDK has been developed in Python v3.9 to utilise the full functionality of the HPE Aruba Networking ClearPass REST API environment. Each available REST API command is available for use in this module."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
"homepage" = "https://developer.arubanetworks.com/aruba-cppm/docs/getting-started-with-pyclearpass"
"repository" = "https://github.com/aruba/pyclearpass"
"changelog" = "https://github.com/aruba/pyclearpass/blob/main/RELEASE-NOTES.md"
